<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">Coinz</string><!-- this is the actual name of the app, so no problem here -->
    <string name="action_settings">Settings</string>
    <string name="map">Map</string>
    <string name="depot">Depot</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="launchericon">launchericon</string>
    <string name="confirm_password">confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="red_arrow_up">red arrow up</string>
    <string name="green_arrow_down">green arrow down</string>
    <string name="arrow_up">arrow up</string>
    <string name="select_offer_to_accept">Select offer to accept</string>
    <string name="gold">gold</string>
    <string name="back_to_depot">Back to Depot</string>
    <string name="you_have_an_exchange_capacity_of_25">You have an exchange capacity of 25</string>
    <string name="there_are_no_items_to_exchange_here">There are no items to exchange here</string>
    <string name="tap_on_item_to_exchange_it">Tap on item to exchange it.</string>
    <string name="shilsac">shilsac</string>
    <string name="dolrsac">dolrsac</string>
    <string name="quidsac">quidsac</string>
    <string name="penysac">penysac</string>
    <string name="currenteam">currenteam</string>
    <string name="currentgold">currentgold</string>
    <string name="profile_picture">profile picture</string>
    <string name="_0">0</string>
    <string name="user">user</string>
    <string name="tap_on_picture_to_change_it">Tap on picture to change it</string>
    <string name="save">save</string>
    <string name="lock_icon">lock icon</string>
    <string name="old_password">old password</string>
    <string name="new_password">new password</string>
    <string name="set_new_password">set new password</string>
    <string name="switch_teams_app_will_restart">Switch teams? (app will restart!)</string>
    <string name="i_understand_that_this_will_halve_the_amount_of_gold_i_currently_have">This will halve your current gold. Confirm your intention!</string>
    <string name="switch_team">switch team</string>
    <string name="coin_img">coin img</string>
    <string name="select_items_to_trade">Select items to trade</string>
    <string name="how_much_gold_do_you_want">How much Gold do you want?</string>
    <string name="cancel">Cancel</string>
    <string name="place_offer">Place offer</string>
    <string name="team_icon">team icon</string>
    <string name="zone_balance">Zone-Balance</string>
    <string name="gold_creepers">Gold Creepers</string>
    <string name="coin_carvers">Coin Carvers</string>
    <string name="support_team">Support Team</string>
    <string name="movingsac">movingsac</string>
    <string name="catch_me_if_you_can">catch me if you can</string>
    <string name="these_rats">These rats are getting smarter. They are using up our coins. Are they heading for the Big Cheese or maybe some cheesy Nachos at Teviot? Who knows? Hunt them down for big coin rewards.</string>
    <string name="coins_collected_here">Coins collected here bear the prefix cI in their ID.</string>
    <string name="more_events_will_follow">More events will follow …</string>
    <string name="shil_0">SHIL: 0</string>
    <string name="exchange">Exchange</string>
    <string name="dolr_0">DOLR: 0</string>
    <string name="quid_0">QUID: 0</string>
    <string name="peny_0">PENY: 0</string>
    <string name="filter_by_username">Filter by username</string>
    <string name="browse_offers">browse offers</string>
    <string name="make_offers">make offers</string>
    <string name="drag_amount">Drag the amount of gold you want to place onto the zone you want to acquire for your team.</string>
    <string name="grab">grab</string>
    <string name="_2000g">2000G</string>
    <string name="_4000g">4000G</string>
    <string name="_6000g">6000G</string>
    <string name="_8000g">8000G</string>
    <string name="_10000g">10000G</string>
    <string name="zone">zone</string>
    <string name="remember_me">Remember me</string>
    <string name="coinz">COINZ</string>
    <string name="developed_by_frederik_kelbel">developed by Frederik Kelbel</string>
</resources>
