...
                    android:drawableStart="@mipmap/goldcreeper"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
                <!-- Displays bank content-->
                <TextView
                    android:id="@+id/gold_display"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:drawableStart="@mipmap/gold"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
...
                android:contentDescription="@string/profile_picture" />
        </LinearLayout>
    </android.support.design.widget.AppBarLayout>
    <!-- tabs for viewpager are here-->
    <android.support.design.widget.TabLayout
        android:layout_marginTop="1dp"
        android:id="@+id/tabLayout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/nav_item_colors"
        app:tabMode="fixed"
...
